--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.0",
     "react-transition-group": "^4.4.5"
   },
